Various Java cleanups in systemtest
Signed-off-by: Mickael Maison <mickael.maison@gmail.com>